<resources>
    <string name="app_name">Point Counter</string>

    <string name="title_point">Limited Point</string>
    <string name="title_time">Limited Time</string>
    <string name="title_chess">Chess Timer</string>
    <string name="hello_world">Hello world!</string>
    <string name="view_log">View Log</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_log_delete">Delete Log</string>

    //Common
    <string name="score_zero">0:0</string>
    <string name="p1name_default">Player 1</string>
    <string name="p2name_default">Player 2</string>
    <string name="score_button">SCORE</string>
    <string name="colon">:</string>
    <string name="dot">.</string>
    <string name="doublezero">00</string>
    <string name="zero">0</string>
    <string name="start_string">Reset and Start</string>
    <string name="reset_string">Reset</string>
    <string name="min_hint">Min</string>
    <string name="sec_hint">Sec</string>
    <string name="time_zero">00:00.0</string>
    <string name="winner">wins!</string>
    <string name="deuce">Deuce!</string>
    <string name="matchpoint">Match Point!</string>
    <string name="statustext">Status</string>
    <string name="player1semicolon">Player 1:</string>
    <string name="player2semicolon">Player 2:</string>
    <string name="reset">Game reset</string>
    <string name="game_not_start">Please start game first and/or press resume button</string>
    <string name="game_not_start_pause_button">Please start game first</string>
    <string name="scores">scores!</string>
    <string name="scored_at_time">scored at time</string>
    <string name="time_up">Time Up!</string>
    <string name="menu_pause">Pause</string>
    <string name="menu_play">Play</string>
    <string name="view_log_string">Please finish game first before viewing log</string>

    //Point
    <string name="point_max">Max Points</string>
    <string name="point_radio_left">Left</string>
    <string name="point_radio_right">Right</string>
    <string name="point_maxval">11</string>
    <string name="point_use_deuce">Have Deuce?</string>
    <string name="point_game_started">Game Started</string>
    <string name="point_usedeuce">Use deuce:</string>
    <string name="point_radio_position">Position:</string>
    <string name="point_left">left</string>
    <string name="point_right">right</string>

    //Time
    <string name="time_start_not_filled">Please fill in the initial time</string>
    <string name="time_game_started">Game Started</string>
    <string name="time_time_limit_string">Time Limit:</string>
    <string name="time_draw">Draw!</string>

    //Chess
    <string name="chess_start_not_filled">Please fill in the initial time</string>
    <string name="chess_top_player">Top Player</string>
    <string name="chess_bottom_player">Bottom Player</string>
    <string name="chess_top_timer">Top Timer:</string>
    <string name="chess_bottom_timer">Bottom Timer:</string>
    <string name="chess_presses_button">Presses button at</string>
    <string name="chess_top_time">Top Time:</string>
    <string name="chess_bottom_time">Bottom Time:</string>
    <string name="title_activity_view_log">ViewLog</string>

    //ViewLog
    <string name="title_section1">Point</string>
    <string name="title_section2">Time</string>
    <string name="title_section3">Chess</string>
    <string name="view_log_point">Point</string>
    <string name="view_log_time">Time</string>
    <string name="view_log_chess">Chess</string>
    <string name="view_log_delete_dialog_title">Which log to delete?</string>
    <string name="view_log_OK">OK</string>
    <string name="view_log_cancel">Cancel</string>
    <string name="view_log_deleted">Selected log(s) deleted</string>

</resources>
