<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Space
                    android:id="@+id/point_score_space"
                    android:layout_width="match_parent"
                    android:layout_height="140dp" />

                <TextView
                    android:id="@+id/point_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/point_max"
                    android:textSize="40dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/point_p1name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:ems="10"
                        android:gravity="right"
                        android:inputType="textPersonName"
                        android:text="@string/p1name_default" />

                    <EditText
                        android:id="@+id/point_p2name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/p2name_default" />

                </LinearLayout>


                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/point_radio_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/point_radio_left" />

                    <RadioButton
                        android:id="@+id/point_radio_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/point_radio_right" />

                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/point_setmax_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/point_p1max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="120dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@string/point_maxval"
                    android:textSize="100dp" />

                <TextView
                    android:id="@+id/point_colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:textSize="100dp" />

                <EditText
                    android:id="@+id/point_p2max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="120dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@string/point_maxval"
                    android:textSize="100dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/point_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/score_zero"
                android:textSize="105dp" />

            <CheckBox
                android:id="@+id/point_deuce_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:checked="true"
                android:text="@string/point_use_deuce" />

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/point_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/statustext" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/point_p1score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="pointLeftScore"
                android:text="@string/score_button" />

            <Button
                android:id="@+id/point_p2score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="pointRightScore"
                android:text="@string/score_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/point_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="pointStart"
                android:text="@string/start_string" />

            <Button
                android:id="@+id/point_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="pointReset"
                android:text="@string/reset_string" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
