<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/scrollView"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/score_zero"
                    android:textSize="110dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/time_p1name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/p1name_default"
                        android:gravity="right"/>

                    <EditText
                        android:id="@+id/time_p2name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/p2name_default" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/time_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="120dp"
                android:text="@string/time_zero"
                android:textSize="50dp" />

            <LinearLayout
                android:id="@+id/time_set_time_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="120dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/time_init_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="80dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textSize="35dp"
                    android:hint="@string/min_hint" />

                <TextView
                    android:id="@+id/time_colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:textSize="35dp" />

                <EditText
                    android:id="@+id/time_init_sec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="80dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textSize="35dp"
                    android:hint="@string/sec_hint" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/time_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statustext"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/time_p1score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="timeLeftScore"
                android:text="@string/score_button" />

            <Button
                android:id="@+id/time_p2score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="timeRightScore"
                android:text="@string/score_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/time_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="timeStart"
                android:text="@string/start_string" />

            <Button
                android:id="@+id/point_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="timeReset"
                android:text="@string/reset_string" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
